canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.opsbuy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: custom-proxy-service
            port:
              number: 80
  - host: prometheus.opsbuy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
  - host: grafana.opsbuy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80

  - host: dashboard.opsbuy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeapps
            port:
              number: 80
